<resources>
    <string name="app_name">App 1</string>
    <string name="increment"> Add 1 </string>
    <string name="decrement">Remove 1</string>
    <string name="greeting">Hi mom!</string>
    <string name="likes_count">You have %1$d likes</string>
    <string name="radio_label_down">Down</string>
    <string name="radio_label_up">Up</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>


</resources>