<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/increment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/greeting_textview"
        app:layout_constraintLeft_toRightOf="@id/decrement_button"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/increment"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/decrement_button"
        android:onClick="decrement"
        android:layout_width="wrap_content"
        android:background="@color/red"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/greeting_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/increment_button"
        android:text="@string/decrement"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/increment_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_left"
            android:text="@string/radio_label_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_right"
            android:text="@string/radio_label_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>